--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2>Hi, I'm <span class="teal">Ananya Sharma.</span></h2>
-              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
-              <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
+              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#a8bcc3"></span></h5>
+              <!-- <h5 style="color:#a8bcc3">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>"A computer engineer who is a fast learner, creative with technology and passionate to excel in her field.</h5>
             </div>
             <div class="social">
