Changed the colour for the icons

--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
         <a aria-label="Open Ananya's resume in a new tab" href="https://sharmaananya29.github.io/assets/resume/AnanyaSharma_Resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
+
+      <li class="bold">
+        <a aria-label="Navigate to the Places Travelled section" href="#places" class="waves-effect waves-dark teal-text">
+          <i class="mdi-map small"></i><span>Places Travelled</span>
+        </a>
+      </li>
     </ul>
   </nav>
 
