Added a places travelled section with google maps embedded

--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
+      <li class="bold">
+        <a aria-label="Navigate to the Places Travelled section" href="#places" class="waves-effect waves-dark teal-text">
+          <i class="mdi-map small"></i><span>Places Travelled</span>
+        </a>
+      </li>
     </ul>
   </nav>
 
@@ -750,6 +755,27 @@ resulting in a more organized and a detailed system of information
         </p>
       </div>
     </section>
+
+    <!-- Ninth section: Places Travelled-->
+    <section id="places" class="section scrollspy">
+      <h3 class="page-title white-text teal">Places Travelled</h3>
+      <div class="container">
+          <div class="row">
+              <div class="col s12">
+                  <div class="card">
+                      <div class="card-content">
+                          <p>Here are some of the places I've visited:</p>
+                          <div id="map">
+                              <iframe src="https://www.google.com/maps/d/embed?mid=1cbx7FC0Yc9p0fWWTfVL5149-IlGMDVs&ehbc=2E312F" width="640" height="480"></iframe>
+                              </iframe>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </section>
+
   </main>
 
   <!-- typed.js -->
