Added the icon for places travelled

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
       <li class="bold">
         <a aria-label="Navigate to the Places Travelled section" href="#places" class="waves-effect waves-dark teal-text">
-          <i class="mdi-map small"></i><span>Places Travelled</span>
+          <i class="mdi-action-trending-up small"></i><span>Places Travelled</span>
         </a>
       </li>
     </ul>
@@ -205,7 +205,7 @@
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Places Travelled section" href="#places" class="waves-effect waves-dark teal-text">
-          <i class="mdi-map small"></i><span>Places Travelled</span>
+          <i class="mdi-action-trending-up small"></i><span>Places Travelled</span>
         </a>
       </li>
     </ul>
